<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".TopRankingActivity">

    <Button
        android:id="@+id/btn_volverOperacionesFromRanking"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/button_custom_green"
        android:text="@string/btn_VolverInfo"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <ListView
        android:id="@+id/listView_topRanking"
        android:layout_width="361dp"
        android:layout_height="313dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <RadioGroup
        android:id="@+id/rGroupTop"
        android:layout_width="309dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <RadioButton
            android:id="@+id/rBtn_top_Viz"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/txt_Vizcaya"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rBtn_top_Gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/txt_Guipuzcoa"
            android:textColor="@color/white" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>